# agent_4_all

./: .gitignore  Makefile  README.md  docker-compose.yml  init-db.sql  seed-admin.sh
backend/auth-service/: Cargo.toml
backend/auth-service/src/: lib.rs  main.rs  server.rs  server.rs.backup
backend/auth-service/src/api/: handlers.rs  mod.rs  responses.rs
backend/auth-service/src/crypto/: keypair.rs  mod.rs  signing.rs  verification.rs
backend/auth-service/src/db/: postgres.rs
backend/auth-service/src/models/: agent.rs  mod.rs  transaction.rs
backend/protocol-adapters/: Cargo.toml
backend/protocol-adapters/src/: main.rs  main.rs.backup
backend/protocol-adapters/src/api/: admin_block_ledger.rs  agent_blocking_handlers.rs  agents.rs  agents.rs.broken  main.rs  merchant_handlers.rs  merchants.rs  mod.rs  network.rs  network.rs.backup  network_multi_teams_patch.py  network_safe_patch.py  network_update.sql  teams.rs  transactions.rs  transactions.rs.backup  transactions_complete.rs
backend/protocol-adapters/src/auth/: handlers.rs  merchant_handlers.rs  mod.rs  models.rs
backend/protocol-adapters/src/handlers/: mod.rs  openai.rs
backend/protocol-adapters/src/interceptors/: acp.rs  mcp.rs  mod.rs  trait_.rs
backend/security-gateway/: Cargo.toml
backend/security-gateway/src/: db.rs  gateway.rs  lib.rs
backend/security-gateway/src/models/: mod.rs  risk_scoring.rs  security_context.rs  verification.rs
docs/: agent_block_refund_schema.sql  agentic-finance-platform-architecture.md  checkpoint-progress-point-3.md  fix_timestamp.sql  fix_transaction_columns.sql  recreate_transactions.sql  schema.sql  schema_fix.sql  schema_fix2.sql  schema_update_multi_teams.sql
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  DarkModeContext.js  index.js
frontend/src/components/: AdminAllAgents.jsx  AdminAllAgents.jsx.old  AdminBlockRequests.jsx  AdminDashboard.jsx  AdminMerchants.jsx  AgentDetail.jsx  AgentDetail_polling.jsx  AgentList.jsx  AgentList_polling.jsx  BlockAgentModal.jsx  BlockWithRefundModal.jsx  Dashboard.jsx  EvaluationModal.jsx  Landing.jsx  Login.jsx  Logo.jsx  MerchantDashboard.jsx  MerchantLogin.jsx  MerchantProtectedRoute.jsx  MerchantRegister.jsx  MultiGraphDashboard.jsx  NetworkGraphView.jsx  Register.jsx  RegisterAgent.jsx  RegisterAgentModal.jsx  TeamCreationModal.jsx  TeamGraphView.jsx  TeamGraphView.jsx.backup  TeamHistoryView.jsx  TransactionDetailModal.jsx  TransactionModal.jsx
frontend/src/context/: AuthContext.js
frontend/src/services/: api.js  authService.js  merchantAuthService.js
src/: main.rs
src/api/: agents.rs
