[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Cryptography
ed25519-dalek = "2.1"
rand = "0.8"
sha2 = "0.10"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "rust_decimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Environment variables
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Encoding
base64 = "0.22"
hex = "0.4"

# Decimal numbers
rust_decimal = { version = "1.36", features = ["db-postgres"] }

# HTTP Server
actix-web = "4.9"
actix-cors = "0.7"