[package]
name = "protocol-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"  # ADD THIS
async-trait = "0.1"         # ADD THIS

# Add security gateway
security-gateway = { path = "../security-gateway" }