[package]
name = "security-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "rust_decimal"] }

# Crypto
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
base64 = "0.22"

# Utilities
uuid = { version = "1.11", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
rust_decimal = { version = "1.36", features = ["db-postgres"] }
tracing = "0.1"

# Environment
dotenv = "0.15"

[lib]
name = "security_gateway"
path = "src/lib.rs"